[project]
name = "rafay-api-poc"
version = "0.1.0"
description = "POC FastAPI proxy for Rafay APIs (AiFabrik Compute Provisioning Service)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "pydantic-settings>=2.7",
]

[tool.uv]
package = false
